--- a/docs/setup.asciidoc
+++ b/docs/setup.asciidoc
@@ -477,7 +477,7 @@ settings.ClusterConfigurator = builder => builder.Subscribe(new MongoEventSubscr
 var mongoClient = new MongoClient(settings);
 ----
 
-If the agent is included by referencing the `Elastic.Apm.NetCoreAll` package, it will automatically capture calls to MongoDB on every active transaction.
+Once the above configuration is in place, and if the agent is included by referencing the `Elastic.Apm.NetCoreAll` package, it will automatically capture calls to MongoDB on every active transaction.
 Otherwise, you can manually activate auto instrumentation from the `Elastic.Apm.MongoDb` package by calling `Agent.Subscribe(new MongoDbDiagnosticsSubscriber());`.
 
 [[setup-general]]
