--- a/docs/configuration.asciidoc
+++ b/docs/configuration.asciidoc
@@ -1,20 +1,20 @@
 ifdef::env-github[]
 NOTE: For the best reading experience,
-please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotnet[elastic.co]
+please view this documentation at https://www.elastic.co/guide/en/apm/agent/dotnet[elastic.co].
 endif::[]
 
 [[configuration]]
 == Configuration
 
-You can utilize configuration options to adapt the Elastic APM agent to your needs. There are multiple configuration sources, each with different naming conventions for the property key.
+Utilize configuration options to adapt the Elastic APM {agent} to your needs. There are multiple configuration sources, each with different naming conventions for the property key.
 
-By default, the agent uses environment variables. Additionally, on ASP.NET Core, the agent can plug into the https://docs.microsoft.com/en-us/aspnet/core/fundamentals/configuration/?view=aspnetcore-2.2[Microsoft.Extensions.Configuration] infrastructure.
+By default, the {agent} uses environment variables. Additionally, on ASP.NET Core, the {agent} can plug into the https://docs.microsoft.com/en-us/aspnet/core/fundamentals/configuration/?view=aspnetcore-2.2[Microsoft.Extensions.Configuration] infrastructure.
 
 [float]
 [[dynamic-configuration]]
 === Dynamic configuration
 
-Configuration options marked with the image:./images/dynamic-config.svg[] badge can be changed at runtime
+Configuration options that are marked with the image:./images/dynamic-config.svg[] badge can be changed at runtime
 when set from a supported source.
 
 The .NET Agent supports {apm-app-ref}/agent-configuration.html[Central configuration],
@@ -25,7 +25,7 @@ This feature is enabled in the Agent by default, with <<config-central-config>>.
 === Configuration on ASP.NET Core
 
 The `UseElasticApm()` extension method offers an overload to pass an `IConfiguration` instance to the APM Agent.
-To use this type of setup, which is typical in an ASP.NET Core application, your application's `Startup.cs` file should contain code similar to the following:
+To use this type of setup, which is typical in an ASP.NET Core application, your applications `Startup.cs` file should contain code similar to the following:
 
 [source,csharp]
 ----
@@ -57,7 +57,7 @@ For example, any configuration source that has been configured on the `IConfigur
 More information is available in the official https://docs.microsoft.com/en-us/aspnet/core/fundamentals/configuration/?view=aspnetcore-3.1[Microsoft .NET Core configuration docs]
 You can find the key for each APM configuration option in this documentation, under the `IConfiguration or Web.config key` column of the option's description.
 
-NOTE: It is also possible to call `UseElasticApm()` without the overload. In this case, the agent will only read configurations from environment variables.
+NOTE: It is also possible to call `UseElasticApm()` without the overload. In this case, the {agent} will only read configurations from environment variables.
 
 NOTE: The `UseElasticApm` method only turns on ASP.NET Core monitoring. To turn on tracing for everything supported by the Agent on .NET Core, including HTTP and database monitoring, use the `UseAllElasticApm` method from the `Elastic.Apm NetCoreAll` package. Learn more in <<setup-asp-net-core,ASP.NET Core setup>>.
 
@@ -86,10 +86,10 @@ Here is a sample `appsettings.json` configuration file for a typical ASP.NET Cor
 }
 ----
 <1> With ASP.NET Core, you must set `LogLevel` for the internal APM logger in the standard `Logging` section with the `Elastic.Apm` category name.
-<2> The configurations below `ElasticApm` are fetched by the agent if the corresponding `IConfiguration` is passed to the agent.
+<2> The configurations below `ElasticApm` are fetched by the {agent} if the corresponding `IConfiguration` is passed to the agent.
 
-In certain scenarios--like when you're not using ASP.NET Core--you won't activate the agent with the `UseElasticApm()` method.
-In this case, you can set the agent's log level with <<config-log-level,`ElasticApm:LogLevel`>>, as shown in the following `appsettings.json` file:
+In certain scenarios--like when you're not using ASP.NET Core, the {agent} won't be activated with the `UseElasticApm()` method.
+In this case, set the agents log level with <<config-log-level,`ElasticApm:LogLevel`>>, as shown in the following `appsettings.json` file:
 
 [source,js]
 ----
@@ -113,12 +113,11 @@ In this case, you can set the agent's log level with <<config-log-level,`Elastic
 [[configuration-on-asp-net]]
 === Configuration on ASP.NET
 
-When monitoring ASP.NET applications the agent uses two source of configuration:
+When monitoring ASP.NET applications the {agent} uses two sources of configuration:
 Web.config and environment variables.
 Web.config has precedence over environment variables which means that
-the agent first tries to find a configuration option value by its key in Web.config.
-Only if it's not present then the agent tries to look for it among environment variables
-and if it's not present there as well the agent falls back on the option's default value.
+the {agent} tries first to find a configuration option value by its key in Web.config.
+If it's not present, then the {agent} tries to look for it among environment variables. If it's not present, the {agent} falls back to the options default value.
 
 You can find the key of each configuration option
 in the `IConfiguration or Web.config key` column of the corresponding option's description.
@@ -146,7 +145,7 @@ Below is a sample `Web.config` configuration file for a ASP.NET application.
 ----
 
 Additionally, on ASP.NET, you can implement your own configuration reader. To do this, implement the `IConfigurationReader` interface from the `Elastic.Apm.Config` namespace.
-Once implemented, you can make use of the <<config-full-framework-configuration-reader-type, `FullFrameworkConfigurationReaderType`>> setting.
+Once implemented, use the <<config-full-framework-configuration-reader-type, `FullFrameworkConfigurationReaderType`>> setting.
 
 [float]
 [[config-full-framework-configuration-reader-type]]
@@ -154,7 +153,7 @@ Once implemented, you can make use of the <<config-full-framework-configuration-
 
 This setting is .NET Full Framework only.
 
-With this setting you can point an agent to a custom `IConfigurationReader` implementation and the agent will read configuration from your `IConfigurationReader` implementation.
+This setting can point an {agent} to a custom `IConfigurationReader` implementation and the {agent} will read configuration from your `IConfigurationReader` implementation.
 
 Use type name in  https://docs.microsoft.com/en-us/dotnet/api/system.type.assemblyqualifiedname?view=netcore-3.1#System_Type_AssemblyQualifiedName[AssemblyQualifiedName] format (e.g: `MyClass, MyNamespace`).
 
@@ -182,16 +181,16 @@ If this setting is set in both the web.config file and as an environment variabl
 
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
-A boolean specifying if the agent should be recording or not.
-When recording, the agent captures HTTP requests, tracks errors, and collects and sends metrics.
-When not recording, the agent works as a noop, not collecting data and not communicating with the APM server,
+A Boolean specifying if the {agent} should be recording or not.
+When recording, the {agent} captures HTTP requests, tracks errors, and collects and sends metrics.
+When not recording, the {agent} works as a noop, where it does not collect data or communicate with the APM server,
 except for polling the central configuration endpoint.
-As this is a reversible switch, agent threads are not killed when inactivated, but they will be
+This is a reversible switch, so the {agent} threads are not killed when deactivated, but they will be
 mostly idle in this state, so the overhead should be negligible.
 
-You can use this setting to dynamically disable Elastic APM at runtime.
+Use this setting to dynamically disable Elastic APM at runtime.
 
-WARNING: Setting `Recording` to `false` influences the behavior of the <<public-api>>. When the agent is not active it won't keep track of transactions, spans and any related properties on those.
+WARNING: Setting `Recording` to `false` influences the behavior of the <<public-api>>. When the {agent} is not active, it won't keep track of transactions, spans, and any related properties.
 
 [options="header"]
 |============
@@ -211,10 +210,10 @@ WARNING: Setting `Recording` to `false` influences the behavior of the <<public-
 [[config-enabled]]
 ==== `Enabled` (added[1.7.0])
 
-Setting to false will completely disable the agent, including instrumentation and remote config polling.
-If you want to dynamically change the status of the agent, use <<config-recording,`recording`>> instead.
+Setting this to `false` will completely disable the {agent}, including instrumentation and remote config polling.
+If you want to dynamically change the status of the {agent}, use <<config-recording,`recording`>> instead.
 
-WARNING: Setting `Enabled` to `false` influences the behavior of the <<public-api>>. When the agent is not active it won't keep track of transactions, spans and any related properties on those.
+WARNING: Setting `Enabled` to `false` influences the behavior of the <<public-api>>. When the {agent} is not active, it won't keep track of transactions, spans, and any related properties.
 
 [options="header"]
 |============
@@ -236,7 +235,7 @@ WARNING: Setting `Enabled` to `false` influences the behavior of the <<public-ap
 This is used to keep all the errors and transactions of your service together
 and is the primary filter in the Elastic APM user interface.
 
-NOTE: The service name must conform to this regular expression: `^[a-zA-Z0-9 _-]+$`. In less regexy terms: Your service name must only contain characters from the ASCII alphabet, numbers, dashes, underscores and spaces. Characters in service name which don't match regular expression will be replaced by `_` symbol.
+NOTE: The service name must conform to this regular expression: `^[a-zA-Z0-9 _-]+$`. Your service name must only contain characters from the ASCII alphabet, numbers, dashes, underscores, and spaces. Characters in service name that don't match regular expression will be replaced by `_` symbol. 
 
 [options="header"]
 |============
@@ -254,8 +253,8 @@ NOTE: The service name must conform to this regular expression: `^[a-zA-Z0-9 _-]
 [[config-service-node-name]]
 ==== `ServiceNodeName` (added[1.3])
 
-Optional name used to differentiate between nodes in a service.
-If not set, data aggregations will be done based on a container ID (where valid) or on the reported hostname (automatically discovered).
+This is an optional name used to differentiate between nodes in a service.
+If this is not set, data aggregations are done based on a container ID (where valid) or on the reported hostname (automatically discovered).
 
 NOTE: This feature requires APM Server versions >= 7.5
 
@@ -277,7 +276,7 @@ NOTE: This feature requires APM Server versions >= 7.5
 
 A version string for the currently deployed version of the service. If you don’t
 version your deployments, the recommended value for this field is the commit identifier
-of the deployed revision, e.g. the output of git rev-parse HEAD.
+of the deployed revision, e.g. the output of git rev-parse HEAD. 
 
 [options="header"]
 |============
@@ -296,7 +295,7 @@ of the deployed revision, e.g. the output of git rev-parse HEAD.
 [[config-hostname]]
 ==== `HostName` (added[1.7])
 
-Allows for the reported hostname to be manually specified. If unset, the hostname will be looked up.
+This allows for the reported hostname to be manually specified. If this is not set, the hostname will be looked up.
 
 [options="header"]
 |============
@@ -315,10 +314,10 @@ Allows for the reported hostname to be manually specified. If unset, the hostnam
 [[config-environment]]
 ==== `Environment` (added[1.1])
 
-The name of the environment this service is deployed in, e.g. "production" or "staging".
+The name of the environment that this service is deployed in, e.g. "production" or "staging".
 
 Environments allow you to easily filter data on a global level in the APM app.
-It's important to be consistent when naming environments across agents.
+It's important to be consistent when naming environments across {agent}s.
 See {apm-app-ref}/filters.html#environment-selector[environment selector] in the Kibana UI for more information.
 
 NOTE: This feature is fully supported in the APM app in Kibana versions >= 7.2.
@@ -336,7 +335,7 @@ You must use the query bar to filter for a specific environment in versions prio
 | See note below | String
 |============
 
-NOTE: On ASP.NET Core application the agent uses https://docs.microsoft.com/en-us/dotnet/api/microsoft.aspnetcore.hosting.ihostingenvironment.environmentname?view=aspnetcore-2.2#Microsoft_AspNetCore_Hosting_IHostingEnvironment_EnvironmentName[EnvironmentName from IHostingEnvironment] as default environment name.
+NOTE: On ASP.NET Core application the {agent} uses https://docs.microsoft.com/en-us/dotnet/api/microsoft.aspnetcore.hosting.ihostingenvironment.environmentname?view=aspnetcore-2.2#Microsoft_AspNetCore_Hosting_IHostingEnvironment_EnvironmentName[EnvironmentName from IHostingEnvironment] as default environment name.
 
 [float]
 [[config-transaction-sample-rate]]
@@ -344,15 +343,15 @@ NOTE: On ASP.NET Core application the agent uses https://docs.microsoft.com/en-u
 
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
-By default, the agent will sample every transaction (e.g. a request to your service).
-To reduce overhead and storage requirements, you can set the sample rate to a value between 0.0 and 1.0.
-The agent will still record the overall time and result for unsampled transactions,
+By default, the {agent} samples every transaction (e.g. a request to your service).
+To reduce overhead and storage requirements, set the sample rate to a value between 0.0 and 1.0.
+The {agent} will still record the overall time and result for unsampled transactions,
 but no context information, labels, or spans will be recorded.
 
-NOTE: When parsing the value for this option, the agent doesn't consider the current culture.
+NOTE: When parsing the value for this option, the {agent} doesn't consider the current culture.
 It also expects that a period (`.`) is used to separate the integer and the fraction of a floating-point number.
 
-This setting can be changed after agent's start.
+This setting can be changed after the {agent} is started.
 
 [options="header"]
 |============
@@ -372,8 +371,8 @@ This setting can be changed after agent's start.
 
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
-Limits the amount of spans that are recorded per transaction.
-This is helpful in cases where a transaction creates a very high amount of spans,
+This limits the amount of spans that are recorded per transaction.
+This is helpful when a transaction creates a very high amount of spans,
 for example, thousands of SQL queries.
 Setting an upper limit helps prevent overloading the Agent and APM server in these edge cases.
 
@@ -381,7 +380,7 @@ NOTE: A value of `0` means that spans will never be collected.
 Setting `-1` means that spans will never be dropped.
 The Agent will revert to the default value if the value is set below `-1`.
 
-This setting can be changed after agent's start.
+This setting can be changed after {agent} is started.
 
 [options="header"]
 |============
@@ -399,7 +398,7 @@ This setting can be changed after agent's start.
 [[config-central-config]]
 ==== `CentralConfig` (added[1.1])
 
-If set to `true`, the agent makes periodic requests to the APM Server to fetch
+If set to `true`, the {agent} makes periodic requests to the APM Server to fetch
 the latest {apm-app-ref}/agent-configuration.html[APM Agent configuration].
 
 [options="header"]
@@ -422,21 +421,19 @@ the latest {apm-app-ref}/agent-configuration.html[APM Agent configuration].
 
 Sometimes it is necessary to sanitize, i.e., remove, sensitive data sent to Elastic APM.
 This config accepts a list of wildcard patterns of field names which should be sanitized.
-These apply for example to HTTP headers and `application/x-www-form-urlencoded` data.
+These apply to HTTP headers and `application/x-www-form-urlencoded` data.
 
-IMPORTANT: This setting only applies to values that are captured automatically by the agent. If you capture the request body manually with the public API, this configuration doesn't apply, and the agent won't sanitize the body.
+IMPORTANT: This setting only applies to values that are captured automatically by the {agent}. If you capture the request body manually with the public API, this configuration doesn't apply, and the {agent} won't sanitize the body.
 
 The wildcard, `*`, matches zero or more characters, and matching is case insensitive by default.
 Prepending an element with `(?-i)` makes the matching case sensitive.
 Examples: `/foo/*/bar/*/baz*`, `*foo*`.
 
-You should review the data captured by Elastic APM carefully to make sure it does not contain sensitive information.
-If you do find sensitive data in your Elasticsearch index,
-you should add an additional entry to this list.
-Make sure to include the default entries as well, as setting a value here will overwrite the defaults.
+Please be sure to review the data captured by Elastic APM carefully to make sure it does not contain sensitive information.
+If you do find sensitive data in your Elasticsearch index, add an additional entry to this list.
+Setting a value here will overwrite the defaults, so be sure to include the default entries as well.
 
-NOTE: Data in the query string is considered non-sensitive,
-as sensitive information should not be sent in the query string.
+NOTE: Sensitive information should not be sent in the query string. Data in the query string is considered non-sensitive.
 See https://www.owasp.org/index.php/Information_exposure_through_query_strings_in_url[owasp.org] for more information.
 
 [options="header"]
@@ -455,8 +452,8 @@ See https://www.owasp.org/index.php/Information_exposure_through_query_strings_i
 [[config-global-labels]]
 ==== `GlobalLabels` (added[1.2])
 
-Labels added to all events, with the format `key=value[,key=value[,...]]`.
-Any labels set by the application via the agent's public API will override global labels with the same keys.
+These are labels that are added to all events with the format `key=value[,key=value[,...]]`.
+Any labels set by the application via the {agent}'s public API will override global labels with the same keys.
 
 [options="header"]
 |============
@@ -499,12 +496,12 @@ IMPORTANT: Use of `ServerUrls` is deprecated. Use `ServerUrl`.
 [[config-secret-token]]
 ==== `SecretToken`
 
-A string used to ensure that only your agents can send data to your APM server.
+A string used to ensure that only your {agent}s can send data to your APM server.
 
-Both the agents and the APM server have to be configured with the same secret token.
-Use this setting in case the APM Server requires a token (e.g. APM Server in Elastic Cloud).
+Both the {agent}s and the APM server have to be configured with the same secret token.
+Use this setting if the APM Server requires a token (e.g. APM Server in Elastic Cloud).
 
-WARNING: the `SecretToken` is sent as plain-text in every request to the server, so you should also secure
+WARNING: The `SecretToken` is sent as plain-text in every request to the server, so you should also secure
 your communications using HTTPS. Unless you do so, your API Key could be observed by an attacker.
 
 [options="header"]
@@ -523,12 +520,12 @@ your communications using HTTPS. Unless you do so, your API Key could be observe
 [[config-api-key]]
 ==== `ApiKey` (added[1.4])
 
-A base64-encoded string used to ensure that only your agents can send data to your APM server.
+A base64-encoded string used to ensure that only your {agent}s can send data to your APM server.
 You must have created the API key using the APM server's {apm-server-ref-v}/api-key.html[command line tool].
 
 NOTE: This feature is fully supported in the APM Server versions >= 7.6.
 
-WARNING: the `APIKey` is sent as plain-text in every request to the server, so you should also secure
+WARNING: The `APIKey` is sent as plain-text in every request to the server, so you should also secure
 your communications using HTTPS. Unless you do so, your API Key could be observed by an attacker.
 
 [options="header"]
@@ -547,7 +544,7 @@ your communications using HTTPS. Unless you do so, your API Key could be observe
 [[config-verify-server-cert]]
 ==== `VerifyServerCert` (added[1.3])
 
-By default, the agent verifies the SSL certificate if you use an HTTPS connection to the APM server.
+By default, the {agent} verifies the SSL certificate if you use an HTTPS connection to the APM server.
 
 Verification can be disabled by changing this setting to false.
 
@@ -567,7 +564,7 @@ Verification can be disabled by changing this setting to false.
 [[config-server-cert]]
 ==== `ServerCert` (added[1.9])
 
-The path to a PEM-encoded certificate used for SSL/TLS by APM server, used to perform validation 
+The path to a PEM-encoded certificate used for SSL/TLS by APM server, is used to perform validation 
 through certificate pinning. 
 
 This can be specified when using a certificate signed by a Certificate Authority (CA) that is not in 
@@ -591,7 +588,7 @@ the trust store, such as a self-signed certificate.
 
 The maximal amount of time events are held in the queue until there is enough to send a batch.
 It's possible for a batch to contain less than <<config-max-batch-event-count,`MaxBatchEventCount`>> events
-if there are events that need to be sent out because they were held for too long.
+if there are events that need to be sent out because they were held for too long. 
 A lower value will increase the load on your APM server,
 while a higher value can increase the memory pressure on your app.
 A higher value also impacts the time until transactions are indexed and searchable in Elasticsearch.
@@ -601,11 +598,11 @@ Example: `30s`.
 The default unit for this option is `s`.
 
 If `FlushInterval` is set to `0` (or `0s`, `0ms`, etc.) and
-there's no event sending operation still in progress
-then the Agent won't hold events in the queue and instead will send them immediately.
+there's no event sending operation still in progress,
+then the Agent won't hold events in the queue and will send them immediately.
 
 Setting `FlushInterval` to a negative value (for example `-1`, `-54s`, `-89ms`, etc.) is invalid and
-in that case agent uses the default value instead.
+in that case {agent} uses the default value instead.
 
 [options="header"]
 |============
@@ -623,13 +620,13 @@ in that case agent uses the default value instead.
 [[config-max-batch-event-count]]
 ==== `MaxBatchEventCount` (added[1.1])
 
-The maximal number of events to send in a batch.
+The maximum number of events to send in a batch.
 It's possible for a batch to contain less then the maximum events
 if there are events that need to be sent out because they were held for too long
  (see <<config-flush-interval,`FlushInterval`>>).
 
-Setting `MaxBatchEventCount` to 0 or a negative value is invalid and
-in that case the Agent will use the default value instead.
+Setting `MaxBatchEventCount` to `0` or a negative value is invalid and
+the Agent will use the default value instead.
 
 [options="header"]
 |============
@@ -648,11 +645,10 @@ in that case the Agent will use the default value instead.
 ==== `MaxQueueEventCount` (added[1.1])
 
 The maximum number of events to hold in the queue as candidates to be sent.
-If the queue is at its maximum capacity then the agent discards the new events
+If the queue is at its maximum capacity then the {agent} discards the new events
 until the queue has free space.
 
-Setting `MaxQueueEventCount` to 0 or a negative value is invalid and
-in that case the Agent will use the default value instead.
+Setting `MaxQueueEventCount` to `0` or a negative value is invalid and the Agent will use the default value instead.
 
 [options="header"]
 |============
@@ -670,9 +666,9 @@ in that case the Agent will use the default value instead.
 [[config-metrics-interval]]
 ==== `MetricsInterval` (added[1.0.0-beta1])
 
-The interval at which the agent sends metrics to the APM Server.
-Must be at least `1s`.
-Set to `0s` to deactivate.
+The interval at which the {agent} sends metrics to the APM Server.
+This must be at least `1s`.
+Set this to `0s` to deactivate.
 
 Supports the duration suffixes `ms`, `s` and `m`.
 Example: `30s`.
@@ -694,7 +690,7 @@ The default unit for this option is `s`.
 [[config-disable-metrics]]
 ==== `DisableMetrics` (added[1.3.0])
 
-Disables the collection of certain metrics. If the name of a metric matches any of the wildcard expressions, it will not be collected. Example: `foo.*,bar.*`
+This disables the collection of certain metrics. If the name of a metric matches any of the wildcard expressions, it will not be collected. Example: `foo.*,bar.*`
 
 You can find the name of the available metrics in <<metrics>>.
 
@@ -716,7 +712,7 @@ This option supports the wildcard `*`, which matches zero or more characters. Ex
 [[config-cloud-provider]]
 ==== `CloudProvider` (added[1.7.0])
 
-Allows you to specify which cloud provider should be assumed for metadata collection. By default, the agent will attempt to detect the cloud provider and, if that fails, use trial and error to collect the metadata.
+Specify which cloud provider should be assumed for metadata collection. By default, the {agent} attempts to detect the cloud provider and, if that fails, uses trial and error to collect the metadata.
 
 Valid options are `"auto"`, `"aws"`, `"gcp"`, `"azure"`, and `"none"`. If this config value is set to `"none"`, no cloud metadata will be collected. If set to any of
 `"aws"`, `"gcp"`, or `"azure"`, attempts to collect metadata will only be performed
@@ -743,13 +739,13 @@ from the chosen provider.
 
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
-For transactions that are HTTP requests, the agent can optionally capture the request body, e.g., POST variables.
+For transactions that are HTTP requests, the {agent} can optionally capture the request body, e.g., POST variables.
 If the request has a body and this setting is disabled, the body will be shown as [REDACTED].
 This option is case-insensitive.
 
 [IMPORTANT]
 ====
-To allow capturing request bodies, the agent sets `AllowSynchronousIO` to `true` on a per
+To allow capturing request bodies, the {agent} sets `AllowSynchronousIO` to `true` on a per
 request basis in ASP.NET Core, since capturing can occur in synchronous code paths.
 
 https://docs.microsoft.com/en-us/aspnet/core/migration/22-to-30?#allowsynchronousio-disabled[With ASP.NET Core 3.0 onwards, `AllowSynchronousIO` is `false` by default]
@@ -760,7 +756,7 @@ feature enabled, consider disabling capturing.
 
 [WARNING]
 ====
-Request bodies often contain sensitive values like passwords, credit card numbers, etc.
+Request bodies often contain sensitive values like passwords and credit card numbers.
 If your service handles data like this, we advise to only enable this feature with care.
 Turning on body capturing can also significantly increase the overhead in terms of heap usage,
 network utilization, and Elasticsearch index size.
@@ -773,7 +769,7 @@ Possible options are `off`, `errors`, `transactions` and `all`:
 * `transactions` - request bodies will only be reported with request transactions
 * `all` - request bodies will be reported with both errors and request transactions
 
-This setting can be changed after agent's start.
+This setting can be changed after the {agent} is started.
 
 [options="header"]
 |============
@@ -791,13 +787,13 @@ This setting can be changed after agent's start.
 [[config-capture-body-content-types]]
 ==== `CaptureBodyContentTypes` (performance) (added[1.0.1])
 
-Configures which content types should be captured.
+This determines which content types should be captured.
 
 This option supports the wildcard `*`, which matches zero or more characters.
 Examples: `/foo/*/bar/*/baz*`, `*foo*`.
 Matching is case insensitive.
 
-This setting can be changed after agent's start.
+This setting can be changed after the {agent} is started.
 
 [options="header"]
 |============
@@ -818,9 +814,9 @@ This setting can be changed after agent's start.
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
 If set to `true`,
-the agent will capture request and response headers, including cookies.
+the {agent} will capture request and response headers, including cookies.
 
-NOTE: Setting this to `false` reduces memory allocations, network bandwidth and disk space used by Elasticsearch.
+NOTE: Setting this to `false` reduces memory allocations, network bandwidth, and disk space used by Elasticsearch.
 
 [options="header"]
 |============
@@ -840,10 +836,10 @@ NOTE: Setting this to `false` reduces memory allocations, network bandwidth and 
 
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
-Used to restrict requests to certain URLs from being instrumented.
+This is used to restrict requests to certain URLs from being instrumented.
 
 This property should be set to a list containing one or more strings.
-When an incoming HTTP request is detected, its request path will be tested against each element in this list.
+When an incoming HTTP request is detected, the request path will be tested against each element in this list.
 For example, adding `/home/index` to this list would match and remove instrumentation from the following URLs:
 
 [source,txt]
@@ -876,9 +872,9 @@ NOTE: All errors that are captured during a request to an ignored URL are still 
 [[config-use-elastic-apm-traceparent-header]]
 ==== `UseElasticTraceparentHeader` (added[1.3.0])
 
-To enable {apm-overview-ref-v}/distributed-tracing.html[distributed tracing], the agent adds trace context headers to outgoing HTTP requests made with the `HttpClient` type. These headers (`traceparent` and `tracestate`) are defined in the https://www.w3.org/TR/trace-context-1/[W3C Trace Context] specification.
+To enable {apm-overview-ref-v}/distributed-tracing.html[distributed tracing], the {agent} adds trace context headers to outgoing HTTP requests made with the `HttpClient` type. These headers (`traceparent` and `tracestate`) are defined in the https://www.w3.org/TR/trace-context-1/[W3C Trace Context] specification.
 
-When this setting is `true`, the agent will also add the header `elasticapm-traceparent` for backwards compatibility with older versions of Elastic APM agents. Versions prior to `1.3.0` only read the `elasticapm-traceparent` header.
+When this setting is `true`, the {agent} also adds the header `elasticapm-traceparent` for backwards compatibility with older versions of Elastic APM {agent}s. Versions prior to `1.3.0` only read the `elasticapm-traceparent` header.
 
 [options="header"]
 |============
@@ -899,7 +895,7 @@ When this setting is `true`, the agent will also add the header `elasticapm-trac
 [[config-application-namespaces]]
 ==== `ApplicationNamespaces` (added[1.5])
 
-Used to determine whether a stack trace frame is an in-app frame or a library frame. When defined, all namespaces that do not start with one of the values of this collection are ignored when determining error culprit.
+This is used to determine whether a stack trace frame is an in-app frame or a library frame. When defined, all namespaces that do not start with one of the values of this collection are ignored when determining error culprit.
 
 Multiple namespaces can be configured as a comma separated list. For example: `"MyAppA, MyAppB"`.
 
@@ -921,7 +917,7 @@ This suppresses any configuration of `ExcludedNamespaces`.
 [[config-excluded-namespaces]]
 ==== `ExcludedNamespaces` (added[1.5])
 
-A list of namespaces to exclude when reading an exception's StackTrace to determine the culprit.
+A list of namespaces to exclude when reading an exceptions StackTrace to determine the culprit.
 
 Namespaces are checked with `string.StartsWith()`, so "System." matches all System namespaces.
 
@@ -942,7 +938,7 @@ Namespaces are checked with `string.StartsWith()`, so "System." matches all Syst
 
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
-Setting it to 0 will disable stack trace collection. Any positive integer value will be used as the maximum number of frames to collect. Setting it to -1 means that all frames will be collected.
+Setting this to `0` disables the stack trace collection. Any positive integer value will be used as the maximum number of frames to collect. Setting it to -1 means that all frames will be collected.
 
 [options="header"]
 |============
@@ -965,12 +961,12 @@ NOTE: If you would like to disable stack trace capturing only for spans, but sti
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
 In its default settings,
-the APM agent collects a stack trace for every recorded span with duration longer than 5ms.
+the APM {agent} collects a stack trace for every recorded span with duration longer than `5ms`.
 While this is very helpful to find the exact place in your code that causes the span,
 collecting this stack trace does have some overhead.
-When setting this option to a negative value, like `-1ms`, stack traces will be collected for all spans.
+When setting this option to a negative value, like `-1ms`, stack traces are collected for all spans.
 Setting it to a positive value, e.g. `5ms`,
-will limit stack trace collection to spans with durations equal to or longer than the given value,
+limits stack trace collection to spans with durations equal to or longer than the given value,
 e.g. 5 milliseconds.
 
 To disable stack trace collection for spans completely, set the value to `0ms`.
@@ -1001,12 +997,12 @@ The default unit for this option is `ms`
 
 <<dynamic-configuration, image:./images/dynamic-config.svg[] >>
 
-Sets the logging level for the agent.
+Sets the logging level for the {agent}.
 
 Valid options: `Critical`, `Error`, `Warning`, `Info`, `Debug`, `Trace` and `None` (`None` disables the logging).
 
-IMPORTANT: The `UseElasticApm()` extension offers an overload to pass an `IConfiguration` instance to the agent.
-When configuring your agent in this way, as is typical in an ASP.NET Core application,
+IMPORTANT: The `UseElasticApm()` extension offers an overload to pass an `IConfiguration` instance to the {agent}.
+When configuring your {agent} in this way, as is typical in an ASP.NET Core application,
 you must instead set the `LogLevel` for the internal APM logger under the `Logging` section of `appsettings.json`. More details, including a <<sample-config,sample configuration file>> are available in <<configuration-on-asp-net-core>>.
 
 [options="header"]
